Correctly hide slippy map on mobile.

--- a/wazimap/static/css/wazimap.css
+++ b/wazimap/static/css/wazimap.css
@@ -1,3 +1,7 @@
+#homepage #slippy-map {
+  display: none;
+}
+
 @media only screen and (min-width: 768px) {
     #homepage #slippy-map {
         width: 100%;
